Updated by mdAutofix.py

--- a/c-legacy-releases/2020/09102020.md
+++ b/c-legacy-releases/2020/09102020.md
@@ -250,7 +250,7 @@ AEM 6.4 Service Pack 8 Cumulative Fix Pack 2 (6.4.8.2，已於 2020 年 9 月 3 
 
 * **[!UICONTROL AEM as a Cloud Service]**
 
-  [!UICONTROL AEM as a Cloud Service ]新增了哪些功能？精選重點包括：
+  [!UICONTROL AEM as a Cloud Service &#x200B;]新增了哪些功能？精選重點包括：
 
    * [!UICONTROL AEM as a Cloud Service]可讓您[將頁面和子頁面 (頁面樹狀結構) 還原為舊版](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/sites/authoring/features/page-versions.html#reinstating-versions)。
    * 現支援透過資產微服務將影片轉碼，且[!UICONTROL 「處理輪廓」]畫面中新增[!UICONTROL 「視訊」]區段，支援視訊位元速率和維度設定 (輸出格式為使用 H.264 轉碼器的 MP4)。如需詳細資訊，請參閱[管理視訊資產](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/assets/manage/manage-video-assets.html#transcode-video)。如需更多轉碼選項及傳送更多視訊，可使用 [!UICONTROL Dynamic Media] 附加元件。
@@ -289,7 +289,7 @@ AEM 6.4 Service Pack 8 Cumulative Fix Pack 2 (6.4.8.2，已於 2020 年 9 月 3 
 * **[!UICONTROL AEM as a Cloud Service 轉換]**&#x200B;全新工具
 
    * 推出 AIO-CLI 增效模組，整合了程式碼重構工具，使開發人員得以從單一位置叫用及執行程式碼重構工具。如需詳細資訊，請參閱 GitHub 資源 [aio-cli-plugin-aem-cloud-service-migration](https://github.com/adobe/aio-cli-plugin-aem-cloud-service-migration)。
-   * [!UICONTROL AEM Dispatcher Converter] 擴充後，可支援將內部部署和 Adobe [!UICONTROL Managed Services Dispatcher ]設定轉換為與 AEM as a Cloud Service 相容的 Dispatcher 設定。如需詳細資訊，請參閱 GitHub 資源 [AEM Cloud Service Dispatcher Converter](https://github.com/adobe/aem-cloud-service-source-migration/tree/master/packages/dispatcher-converter)。
+   * [!UICONTROL AEM Dispatcher Converter] 擴充後，可支援將內部部署和 Adobe [!UICONTROL Managed Services Dispatcher &#x200B;]設定轉換為與 AEM as a Cloud Service 相容的 Dispatcher 設定。如需詳細資訊，請參閱 GitHub 資源 [AEM Cloud Service Dispatcher Converter](https://github.com/adobe/aem-cloud-service-source-migration/tree/master/packages/dispatcher-converter)。
    * AEM Dispatcher Converter 重新寫入 node.js，並與 AIO-CLI 增效模組整合。
 
 * **[!UICONTROL Dynamic Media]** 中的 CDN 失效
