--- a/c-legacy-releases/2021/07222021.md
+++ b/c-legacy-releases/2021/07222021.md
@@ -140,7 +140,7 @@ Experience Cloud 中央介面元件包括可從統一產品標題存取的更新
 
 加入我們的行列，聆聽每個 Adobe Analytics 實作團隊都應該知道的具體技巧，並讓 Eric Matisoff 在聊天窗格中回答您的問題。 這是即時活動，因此您不需要事先報名，但請務必記在您的行事曆上，這樣您才不會錯過！
 
-**活動：**[Adobe Analytics 實作 - 秘訣與技巧](https://www.youtube.com/watch?v=lxOvLCzEGBI)
+**活動：**&#x200B;[Adobe Analytics 實作 - 秘訣與技巧](https://www.youtube.com/watch?v=lxOvLCzEGBI)
 
 **時間：**&#x200B;太平洋夏令時間 2021 年 7 月 29 日上午 9:00
 
