--- a/c-legacy-releases/2021/09152021.md
+++ b/c-legacy-releases/2021/09152021.md
@@ -176,7 +176,7 @@ Audience Manager 中的新功能 - 更新日期：**2021 年 9 月 14 日**：
 
 Experience Platform 中現有功能在 **2021 年 8 月 25 日**&#x200B;的更新包括：
 
-* **[!UICONTROL 目的地]：**[!UICONTROL 目的地]的可用性改良可讓行銷人員順暢地啟用現有目的地的區段。
+* **[!UICONTROL 目的地]：**&#x200B;[!UICONTROL 目的地]的可用性改良可讓行銷人員順暢地啟用現有目的地的區段。
 * **[!UICONTROL 可觀察性深入分析]：**&#x200B;您現在可以訂閱與 Platform 上執行的工作流程相關的重要警示。
 * **[!UICONTROL 即時客戶輪廓]：**&#x200B;現在當您在 Experience Platform 中瀏覽輪廓時，可以依據合併原則來瀏覽，以根據選定的合併原則預覽 20 個範例輪廓。
 * **[!UICONTROL 來源]：**&#x200B;檔案擷取類別已重新命名為本機系統，好讓您可以使用本機檔案上傳連接器將本機檔案直接引進 Platform。
