--- a/c-legacy-releases/2022/01192022.md
+++ b/c-legacy-releases/2022/01192022.md
@@ -234,8 +234,8 @@ Adobe 建議您造訪 [Experience Manager 版本更新與藍圖](https://experie
 
   觀看 [2021 年 12 月發佈概述影片](https://video.tv.adobe.com/v/339278)，了解 2021.11.0 (2021 年 11 月) 版本新增功能摘要。
 
-   * [](https://video.tv.adobe.com/v/338253)2021 年 10 月版本總覽 新功能影片。
-   * [](https://video.tv.adobe.com/v/337381)2021 年 9 月版本總覽新功能影片。
+   * [&#128279;](https://video.tv.adobe.com/v/338253)2021 年 10 月版本總覽 新功能影片。
+   * [&#128279;](https://video.tv.adobe.com/v/337381)2021 年 9 月版本總覽新功能影片。
 
    * **Experience Manager Assets as a Cloud Service**
 
@@ -289,7 +289,7 @@ Adobe 建議您造訪 [Experience Manager 版本更新與藍圖](https://experie
 * **Experience ManagerGEM 網路研討會 - Experience Manager as a Cloud Service** | 2021 年回顧和 2022 年展望
 
   **日期**：2022 年 1 月 25 日星期二
-  **時間：**上午 8 點 (PST) 或下午 5 點 (CET) 或晚上 9:30 (IST)
+  **時間：**&#x200B;上午 8 點 (PST) 或下午 5 點 (CET) 或晚上 9:30 (IST)
   **期限**：60 分鐘
   **費用**：免費！
 
