--- a/c-legacy-releases/2022/04202022.md
+++ b/c-legacy-releases/2022/04202022.md
@@ -177,8 +177,8 @@ Adobe 建議您造訪 [Experience Manager 版本更新與藍圖](https://experie
 
    * [2022 年 1 月版本總覽新功能](https://video.tv.adobe.com/v/340120)影片。
    * [2021 年 12 月版本新功能的總覽影片](https://video.tv.adobe.com/v/339278)。
-   * [](https://video.tv.adobe.com/v/338253)2021 年 10 月版本總覽新功能影片。
-   * [](https://video.tv.adobe.com/v/337381)2021 年 9 月版本總覽新功能影片。
+   * [&#128279;](https://video.tv.adobe.com/v/338253)2021 年 10 月版本總覽新功能影片。
+   * [&#128279;](https://video.tv.adobe.com/v/337381)2021 年 9 月版本總覽新功能影片。
 
 * **Experience Manager Assets as a Cloud Service**
 
