--- a/c-legacy-releases/2022/05182022.md
+++ b/c-legacy-releases/2022/05182022.md
@@ -212,7 +212,7 @@ Adobe 建議您造訪 [Experience Manager 版本更新與藍圖](https://experie
 
 * **Experience Manager as a Cloud Service 基礎**
 
-  _**SDK Build Analyzer**_
+  _&#x200B;**SDK Build Analyzer**&#x200B;_
 
   Experience Manager as a Cloud Service SDK Build Analyzer Maven 外掛程式會偵測 maven 專案中的問題，包括遺漏的相依項目。它讓開發人員有機會在本機開發期間以及使用 Cloud Manager 部署到雲端環境之前發現問題。
 
