--- a/c-legacy-releases/2023/09132023.md
+++ b/c-legacy-releases/2023/09132023.md
@@ -60,7 +60,7 @@ ht-degree: 98%
 * [Digital Experience 藍圖](#blueprints)
 * [Adobe 產品安全性漏洞](https://helpx.adobe.com/tw/security.html)
 
-## ![圖示](/assets/experience-league.png)[!DNL Experience League]活動與最新訊息 {#events}
+## ![圖示](/assets/experience-league.png) [!DNL Experience League]活動與最新訊息 {#events}
 
 了解 Experience League 上的精彩活動。 若要向 Adobe 產品專家學習、與之互動或獲得解答，這是您絕佳的選擇！
 
@@ -547,7 +547,7 @@ Adobe Commerce 的新文章和現有文章的更新。
 | 2023 年 8 月 | [[!DNL USPS Ground Advantage] 運送方式支援 Hotfix (適用於  [!DNL AC-9182])](https://experienceleague.adobe.com/docs/commerce-knowledge-base/kb/troubleshooting/known-issues-patches-attached/usps-ground-advantage-shipping-method-support-hotfix-for-ac-9182.html?lang=zh-Hant) | 新文章 | 了解可在 Adobe Commerce 2.4.4 - 2.4.6-p2 中解決 [!DNL AC-9182] (新 [!DNL USPS Ground Advantage] 運送方式) 問題的修補程式。 |
 | 2023 年 8 月 | [_[!DNL Error opensearch search engine doesn't exist. Falling back to livesearch.]_](https://experienceleague.adobe.com/docs/commerce-knowledge-base/kb/troubleshooting/miscellaneous/error-opensearch-search-engine-doesnt-exist-falling-back-to-livesearch.html?lang=zh-Hant) | 新文章 | 了解在 Adobe Commerce 中顯示以下錯誤時的問題解決方案：_[!DNL Error: opensearch search engine doesn't exist. Falling back to livesearch.]_(在使用 [!DNL Live Search] 的雲端基礎結構上)。 |
 | 2023 年 8 月 | [[!DNL JQuery UI] 安全性漏洞修正  [!DNL CVE-2022-31160] (適用於 2.4.4、2.4.5 和 2.4.6 版本)](https://experienceleague.adobe.com/docs/commerce-knowledge-base/kb/troubleshooting/known-issues-patches-attached/jquery-cve-2022-31160-fix-2.4.4-2.4.5-2.4.6.html?lang=zh-Hant) | 新文章 | 了解有關回報之安全性漏洞 [!DNL CVE-2022-31160] (針對 [!DNL jQuery-UI] 程式庫版本 1.13.1) 的資訊；該版本是在 Adobe Commerce 2.4.4、2.4.5 和 2.4.6 中作為相依性使用。 |
-| 2023 年 8 月 | [減少在 2.4.6 升級之前顯示已過期 _[!DNL oauth_tokens]_的數量](https://experienceleague.adobe.com/docs/commerce-knowledge-base/kb/troubleshooting/installation-and-upgrade/reduce-expired-oauth-tokens-before-2.4.6-upgrade.html?lang=zh-Hant) | 新文章 | 了解顯示多個 *[!DNL oauth_tokens]* (在 *[!DNL oauth_token]* 表格中) 之問題的解決方案；該問題可能會導致升級到版本 2.4.6 時發生長時間延遲。 |
+| 2023 年 8 月 | [減少在 2.4.6 升級之前顯示已過期 _[!DNL oauth_tokens]_&#x200B;的數量](https://experienceleague.adobe.com/docs/commerce-knowledge-base/kb/troubleshooting/installation-and-upgrade/reduce-expired-oauth-tokens-before-2.4.6-upgrade.html?lang=zh-Hant) | 新文章 | 了解顯示多個 *[!DNL oauth_tokens]* (在 *[!DNL oauth_token]* 表格中) 之問題的解決方案；該問題可能會導致升級到版本 2.4.6 時發生長時間延遲。 |
 | 2023 年 8 月 | [提交不正確的檔案時出現部署錯誤](https://experienceleague.adobe.com/docs/commerce-knowledge-base/kb/troubleshooting/deployment/deployment-error-when-committing-incorrect-files.html?lang=zh-Hant) | 新文章 | 了解解決方案：將不應新增的檔案/資料夾提交至存放庫所導致的部署錯誤問題。 |
 | 2023 年 8 月 | [Adobe Commerce 2024 發佈排程](https://experienceleague.adobe.com/docs/commerce-knowledge-base/kb/announcements/commerce-announcements/2024-release-schedule.html?lang=zh-Hant) | 新文章 | 了解我們更新的 2023 年發佈策略，以擴大支援範圍、提供更多安全性更新，並加速創新採用。 |
 | 2023 年 8 月 | [[!DNL Admin] 登入無法運作 - 超出允許的最大工作階段](https://experienceleague.adobe.com/docs/commerce-knowledge-base/kb/troubleshooting/miscellaneous/admin-login-not-working-allowed-session-max-size-exceed.html?lang=zh-Hant) | 新文章 | 了解解決方案：嘗試登入 [!DNL Admin] 面板時，表單卻剛好重新整理，使得您無法登入。 |
@@ -762,7 +762,7 @@ Last updated: **August 9, 2022**
 
 >[!NOTE]
 >
->_[!DNL Adobe Primetime]_現在稱為_[!DNL Adobe Pass]_。在品牌重塑工作完成之前，您近期可能會在文件中看到這兩個品牌名稱。
+>_[!DNL Adobe Primetime]_&#x200B;現在稱為&#x200B;_[!DNL Adobe Pass]_。在品牌重塑工作完成之前，您近期可能會在文件中看到這兩個品牌名稱。
 
 請參閱 [Adobe Pass 發行說明](https://experienceleague.adobe.com/docs/primetime/release-notes/home.html?lang=zh-Hant)以找到特定版本的資訊、系統需求、限制、已修正的問題和已知問題。
 
@@ -772,7 +772,7 @@ Last updated: **August 9, 2022**
 
 >[!NOTE]
 >
->**品牌更新：**_Adobe Document Services_&#x200B;現在是 _Adobe Acrobat Services_。請在[這裡](https://blog.developer.adobe.com/adobe-document-services-is-now-adobe-acrobat-services-f8e3e506b7b1)了解相關內容。
+>**品牌更新：**&#x200B;_Adobe Document Services_&#x200B;現在是 _Adobe Acrobat Services_。請在[這裡](https://blog.developer.adobe.com/adobe-document-services-is-now-adobe-acrobat-services-f8e3e506b7b1)了解相關內容。
 
 +++詳細資訊
 
