--- a/c-legacy-releases/2020/03122020.md
+++ b/c-legacy-releases/2020/03122020.md
@@ -80,7 +80,7 @@ Adobe 正在更新網域和介面標題，以統一及提升您在所有 Experie
 * 改良產品說明：[!UICONTROL Experience League] 已整合至產品中，因此搜尋說明內容時，搜尋範圍會包含社群論壇和影片內容。這項變更可讓您輕鬆存取更多內容，協助您充份運用 Experience Cloud。此外，選取&#x200B;**[!UICONTROL 「說明]** > **[!UICONTROL 意見回饋」]**&#x200B;即可回報問題，或與 Adobe 分享您的想法。
 * 改良通知：[!UICONTROL 「通知」]下拉式選單現在提供兩個標籤，其中一個是您的產品通知，另一個是全球產品公告。
 
-**注意：**[!UICONTROL 「摘要」]頁面已於 2020 年 1 月淘汰。 請參閱產品中的淘汰通知。
+**注意：**&#x200B;[!UICONTROL 「摘要」]頁面已於 2020 年 1 月淘汰。 請參閱產品中的淘汰通知。
 
 如需產品文件，請參閱 [Experience Cloud](https://experienceleague.adobe.com/docs/core-services/interface/experience-cloud.html?lang=zh-Hant) 說明。
 
@@ -153,7 +153,7 @@ Adobe Analytics 的新功能和修正項目：
 | -----------| ---------- | ---------- |
 | 變更 Workspace 計算輸入/結束次數的方式 | 2020 年 4 月 7 日 | 自 2020 年 3 月起，Analysis Workspace 已變更「無」值與輸入/結束動作的互動方式。由於您現在可以在 Analysis Workspace 中開啟或關閉「無」，因此我們會在使用者輸入或結束後套用「無」，但 (eVars) 以往都是事前就先套用。例如，假設瀏覽活動的第一次點擊未對 eVarx 輸入任何值，但第二次點擊有對 eVarx 輸入值。在「Reports &amp; Analytics」中，該輸入會顯示「未指定」，但在 Analysis Workspace 中，這會顯示第二次點擊的值。 |
 | **[!UICONTROL 「轉換級別」]**&#x200B;設定確定汰除 | 2020 年 3 月 3 日 | **[!UICONTROL 「管理工具] > [!UICONTROL 報表套裝] > [!UICONTROL 一般帳戶設定」]**&#x200B;中沒有作用的[「轉換級別」](https://experienceleague.adobe.com/docs/analytics/admin/admin-tools/general-acct-settings-admin.html)設定，預計於 2020 年 3 月 12 日從 UI 中移除。 |
-| **[!UICONTROL 控制面板封存]**&#x200B;確定汰除 | 2020 年 3 月 27 日 | 自2020年10月起，[!UICONTROL  Reports &amp; Analytics]中「**[!UICONTROL 管理儀表板]**」底下的「**[!UICONTROL 檢視封存]**」設定將不再提供使用。 |
+| **[!UICONTROL 控制面板封存]**&#x200B;確定汰除 | 2020 年 3 月 27 日 | 自2020年10月起，[!UICONTROL &#x200B; Reports &amp; Analytics]中「**[!UICONTROL 管理儀表板]**」底下的「**[!UICONTROL 檢視封存]**」設定將不再提供使用。 |
 | 終止支援 TLS 1.1 | 2019 年 10 月 3 日 | 到了 2020 年 3 月 31 日時，Adobe Analytics 將會移除對於 TLS 1.1 的支援。此變更是我們為了保持最高安全標準並提升客戶資料安全性而不斷努力的其中一項成果。 |
 | 新的 Adobe Analytics 網域 | 2019 年 12 月 18 日 | 自 2020 年 1 月 16 日起，Adobe Analytics 開始移動至新網域 - `https://experience.adobe.com/analytics.`<br>**注意：**&#x200B;凡是使用 Adobe ID 或 Enterprise ID 存取 Analytics 的所有使用者，均適用這項變更。 <ul><li>這項網路異動可能會在 Safari 中載入 Analytics 時造成 Cookie 問題。在 「隱私權偏好設定」中取消選取&#x200B;_「防止跨網站追蹤」_，即可在各網域 (以及所有跨網站體驗) 啟用 Cookie，並允許 Analytics 在這個新的 Adobe Experience Cloud 網域中運作。[!DNL Safari]只有 [!DNL Safari] 使用者會受此問題影響，使用其他瀏覽器不會發生問題。</li><li>網域變更可能會導致 [!UICONTROL Activity Map] 在[部分特定情況下](https://experienceleague.adobe.com/docs/analytics/analyze/activity-map/activity-map.html)停止運作。</li></ul> |
 | 終止服務 - Analytics Legacy API | 2020 年 1 月 9 日 | 自 2020 年 11 月起，下列 Analytics Legacy API 服務將終止並關閉。透過這些服務建立的整合應用將會停止運作。 <ul><li>1.3 Analytics API</li><li>1.4 SOAP Analytics API</li><li>Legacy OAuth 驗證 (OAuth 和 JWT)</li></ul>我們提供 [Legacy API EOL 常見問題集](https://github.com/AdobeDocs/analytics-1.4-apis/blob/master/docs/APIEOL.md?mv=email)，以協助回答您的問題，並指引您展開後續操作。採用這些服務的 API 整合應用可移轉為 [1.4 Analytics REST API](https://github.com/AdobeDocs/analytics-1.4-apis?mv=email) 或 [2.0 Analytics API](https://github.com/AdobeDocs/analytics-2.0-apis?mv=email)。Legacy OAuth帳戶可移轉為[Adobe Developer](https://console.adobe.io/home?mv=email) Analytics整合帳戶，藉以存取1.4 Analytics API和2.0 Analytics API。 |
