--- a/c-legacy-releases/2020/06182020.md
+++ b/c-legacy-releases/2020/06182020.md
@@ -108,9 +108,9 @@ Adobe 持續更新網域和介面標題，以統一及提升您使用所有 Expe
 
 [!DNL Adobe Experience Platform] 包含下列新功能：
 
-* **資料科學工作區：**[!DNL JupyterLab Launcher] 現在包含 [!DNL Python] 筆記型電腦啟動器，以供即時機器學習 (測試版)。
+* **資料科學工作區：**&#x200B;[!DNL JupyterLab Launcher] 現在包含 [!DNL Python] 筆記型電腦啟動器，以供即時機器學習 (測試版)。
 * **細分：**&#x200B;新增了日期函數的「週年日期」欄位，讓使用者能在年份之外獨立估算日期。
-* **來源：**[!DNL Apache HDFS] 和 [!DNL Couchbase] 的最新來源連接器。
+* **來源：**&#x200B;[!DNL Apache HDFS] 和 [!DNL Couchbase] 的最新來源連接器。
 
 如需這些功能的詳細資訊，請參閱 [Experience Platform 發行說明](https://www.adobe.io/apis/experienceplatform/home/services/release-notes.html#!end-user/markdown/release-notes/release-notes.md)。
 
@@ -271,7 +271,7 @@ Audience Manager 即將推出網域和標題列更新，除了提升您的使用
 
 | 功能 | 說明 |
 | -----------| ---------- |  
-| 適用於IAB TCF v2.0](https://experienceleague.adobe.com/docs/audience-manager/user-guide/overview/data-privacy/consent-management/aam-iab-plugin.html?lang=zh-Hant)的[Audience Manager外掛程式 | 為了延續Adobe對「設計隱私權」的注重，我們從2020年6月10日起，會將適用IAB TCF的Audience Manager外掛程式升級至IAB透明與同意架構(TCF) 2.0版。 已實作適用 IAB TCF 的 Audience Manager 外掛程式的客戶，必須在 2020 年 8 月 15 日前升級至 2.0 版，才能繼續使用此功能。1.1 版將於 2020 年 8 月 15 日後淘汰，不再支援。 |
+| 適用於IAB TCF v2.0[&#128279;](https://experienceleague.adobe.com/docs/audience-manager/user-guide/overview/data-privacy/consent-management/aam-iab-plugin.html?lang=zh-Hant)的Audience Manager外掛程式 | 為了延續Adobe對「設計隱私權」的注重，我們從2020年6月10日起，會將適用IAB TCF的Audience Manager外掛程式升級至IAB透明與同意架構(TCF) 2.0版。 已實作適用 IAB TCF 的 Audience Manager 外掛程式的客戶，必須在 2020 年 8 月 15 日前升級至 2.0 版，才能繼續使用此功能。1.1 版將於 2020 年 8 月 15 日後淘汰，不再支援。 |
 
 **修正項目**
 
