--- a/c-legacy-releases/2023/08092023.md
+++ b/c-legacy-releases/2023/08092023.md
@@ -58,7 +58,7 @@ ht-degree: 98%
 * [客戶資料管理 - 對話](#voices)
 * [Digital Experience 藍圖](#blueprints)
 
-## ![圖示](/assets/experience-league.png)[!DNL Experience League]活動與最新訊息 {#events}
+## ![圖示](/assets/experience-league.png) [!DNL Experience League]活動與最新訊息 {#events}
 
 了解 Experience League 上的精彩活動。 若要向 Adobe 產品專家學習、與之互動或獲得解答，這是您絕佳的選擇！
 
@@ -710,7 +710,7 @@ Last updated: **August 9, 2022**
 
 >[!NOTE]
 >
->**品牌更新：**_Adobe Document Services_&#x200B;現在是 _Adobe Acrobat Services_。請在[這裡](https://blog.developer.adobe.com/adobe-document-services-is-now-adobe-acrobat-services-f8e3e506b7b1)了解相關內容。
+>**品牌更新：**&#x200B;_Adobe Document Services_&#x200B;現在是 _Adobe Acrobat Services_。請在[這裡](https://blog.developer.adobe.com/adobe-document-services-is-now-adobe-acrobat-services-f8e3e506b7b1)了解相關內容。
 
 +++詳細資訊
 
